# conclave

benchmarks/comorb/: workload.py
conclave/: __init__.py  dag.py  lang.py  workflow.py
conclave/codegen/: jiff.py  motion.py  oblivc.py  python.py  scotch.py  viz.py
conclave/codegen/templates/motion/: CMakeLists.txt  agg_count.tmpl  agg_mean_with_count_col.tmpl  agg_sum.tmpl  bash.tmpl  close.tmpl  concat.tmpl  concat_cols.tmpl  controller.cxx  controller.tmpl  declare_constant.tmpl  distinct_count.tmpl  distinct_count_presorted.tmpl  divide.tmpl  filter_eq_by_constant.tmpl  filter_lt_by_column.tmpl  join_leaky.tmpl  limit.tmpl  limit_leaky.tmpl  matrix_mult.tmpl  multiply.tmpl  project.tmpl  reveal.tmpl  sort_by.tmpl  std_dev.tmpl  workflow.h  workflow.tmpl
conclave/codegen/templates/python/: top_level.tmpl
conclave/config/: __init__.py
conclave/dispatch/: __init__.py  jiff.py  motion.py  oblivc.py  python.py  sharemind.py  single_party.py  spark.py
conclave/job/: __init__.py
conclave/net/: __init__.py
conclave/partition/: __init__.py
